--- a/content/1.index.md
+++ b/content/1.index.md
@@ -2,7 +2,7 @@
 navigation.title: 'Home'
 ---
 
-# Here we g
+# Here we go
 
 A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) :sparkles:
 
