1 change by Nuxt Studio

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,10 +1,11 @@
 ---
-navigation.title: 'Home'
+navigation:
+  title: Home
 ---
 
 # Here we go
 
-A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) :sparkles:
+A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) ✨
 
 ## Features
 
@@ -22,7 +23,12 @@ A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Cont
 
 ## Setup
 
-::button-link{icon="simple-icons:stackblitz" href="https://stackblitz.com/github/Atinux/content-wind/tree/main/.demo?file=content%2F1.index.md" external}
+::button-link
+---
+external: true
+href: https://stackblitz.com/github/Atinux/content-wind/tree/main/.demo?file=content%2F1.index.md
+icon: simple-icons:stackblitz
+---
 Play online on Stackblitz
 ::
 
@@ -32,7 +38,7 @@ Open a terminal and run the following command:
 npx nuxi init -t themes/content-wind my-website
 ```
 
-Follow the instructions in the terminal and you are ready to go :rocket:
+Follow the instructions in the terminal and you are ready to go 🚀
 
 ## Usage
 
@@ -130,9 +136,9 @@ Learn more on [nuxt-icon](https://github.com/Atinux/nuxt-icon) documentation.
 It supports code highlighting with Shiki and as well as different [VS Code themes](https://github.com/shikijs/shiki/blob/main/docs/themes.md#all-themes).
 
 ::markdown-block
-\```ts
+\`\`\`ts
 export default () => 'Hello Content Wind'
-\```
+\`\`\`
 ::
 
 Will result in:
@@ -165,11 +171,9 @@ See the `<MarkdownBlock>` component in [`components/content/MarkdownBlock.vue`](
 
 By leveraging the [`<ContentSlot>`](https://content.nuxtjs.org/api/components/markdown) component from Nuxt Content, you can use both slots and props in Markdown thanks to the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
 
-
 ## Deployment
 
 [![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2FAtinux%2Fcontent-wind-template) [![Deploy to Netlify](https://www.netlify.com/img/deploy/button.svg)](https://app.netlify.com/start/deploy?repository=https://github.com/Atinux/content-wind-template)
-
 
 ### Static Hosting
 
